# vala-language-server

src/: jsonrpc.vala  main.vala  meson.build  server.vala  server_initialize.vala  types.vala  util.vala
src/projects/: abstract_project.vala  ccproject.vala  defaultproject.vala  mesonproject.vala  projects.vala
